k3s/generated_manifests/dazzle/Namespace-dazzle.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: dazzle
