k3s/generated_manifests/dazzle/Service-dazzle-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dazzle.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: dazzle-tailscale
  namespace: dazzle
spec:
  clusterIP: None
  type: ClusterIP
