k3s/generated_manifests/dazzle/Service-dazzle.yaml
apiVersion: v1
kind: Service
metadata:
  name: dazzle
  namespace: dazzle
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: dazzle
  type: ClusterIP
