k3s/generated_manifests/dazzle/Ingress-dazzle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dazzle
  namespace: dazzle
spec:
  ingressClassName: traefik
  rules:
    - host: dazzle.doma.lol
